force-app/main/default/objects/Project__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is developer name from object Developer to inform who&apos;s the project developer</description>
    <label>Developer</label>
    <referenceTo>Developer__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>