force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>Status dari suatu project (Active or Not-active)</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belum Dimulai</fullName>
                <default>true</default>
                <label>Belum Dimulai</label>
            </value>
            <value>
                <fullName>Sedang Berjalan</fullName>
            </value>
            <value>
                <fullName>Selesai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>